WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270473
REGRESSION(
273918@main
): WebAuthn cancel completion handler is never called
https://bugs.webkit.org/show_bug.cgi?id=270473
Summary
REGRESSION(273918@main): WebAuthn cancel completion handler is never called
Charlie Wolfe
Reported
2024-03-04 12:36:24 PST
rdar://122985287
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-03-04 12:41:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25446
EWS
Comment 2
2024-03-04 21:53:25 PST
Committed
275673@main
(6c90d822b9c4): <
https://commits.webkit.org/275673@main
> Reviewed commits have been landed. Closing PR #25446 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug