REGRESSION(273918@main): WebAuthn cancel completion handler is never called https://bugs.webkit.org/show_bug.cgi?id=270473 rdar://122985287

Reviewed by Pascoe.

A completion handler from the web process is stored in `m_cancelHandler` to be called by the delegate.
However, the delegate is immediately cleared, so the completion handler will never be called. We
shouldn’t clear the delegate and controller until `m_cancelHandler` is called.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:

Canonical link: https://commits.webkit.org/275673@main